--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.2",
+    "mongodb": "^6.14.2",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
